文件工具改走统一编解码与忽略规则，并加固 grep、取消与硬拒绝。
Co-authored-by: Cursor <cursoragent@cursor.com>